squid:S2864 entrySet() should be iterated when both key and value are needed findbugs:DM_NUMBER_CTOR Performance-Method invokes inefficient Number constructor; use static valueOf instead pm:UnnecessaryConstructor Remove all unnecessary constructor